--- a/cyberpunkred-raycw.html
+++ b/cyberpunkred-raycw.html
@@ -6,16 +6,28 @@
 		<div><button type="action" name="act_lifepath" >LIFEPATH & INVENTORY</button></div>
 		<div><button type="action" name="act_cyberware" >CYBERWARE</button></div>
 		<div><button type="action" name="act_netrunning" >NETRUNNING</button></div>
+		<div><button type="action" name="act_newcharacter" >TOGGLE STAT/SKILLPOINT TRACKER</button></div>
 </div>
-
-
-
-
 	<input type='hidden' class='sheet-tabstoggle' name='attr_sheetTab'  value='character'  />
 <div class='character'>
 
 
+<input type='hidden' class='sheet-shownewcharacter' name='attr_shownewcharacter' value=1  />
 	<div class="profile section"> 
+		
+		<div class="new-char">
+			<div class="red-bg">
+			<span class="small">SKILL POINTS</span>
+			<span class="big" name="attr_skillpoints"></span>
+			<span class="small">REMAINING</span>
+			</div>
+			<div class="white-bg">
+			<span class="small">STAT POINTS</span>
+			<span class="big" name="attr_statpoints"></span>
+			<span class="small">REMAINING</span>
+			</div>
+		</div>
+
 		<div class="prof-info largeinput">
 			<h3>HANDLE</h3><input type="text" name="attr_character_name" />
 		</div>
@@ -55,19 +67,6 @@
 
 		<input type="hidden" name="attr_skillpoints" />
 		<input type="hidden" name="attr_statpoints" />
-
-		<div class="new-char">
-			<div class="red-bg">
-			<span class="small">SKILL POINTS</span>
-			<span class="big" name="attr_skillpoints"></span>
-			<span class="small">REMAINING</span>
-			</div>
-			<div class="white-bg">
-			<span class="small">STAT POINTS</span>
-			<span class="big" name="attr_statpoints"></span>
-			<span class="small">REMAINING</span>
-			</div>
-		</div>
 	</div>
 
 	<div class="hp section"> 
@@ -87,11 +86,11 @@
 			</div>
 			<div class="darker">
 				<input type="number" name="attr_basedeathpenalty" />
-				<span class="small">DEATH PENALTY</span>
+				<span class="small">BASE PENALTY</span>
 			</div>
 			<div class="clipright">
 				<input type="number" name="attr_deathsavepenalty" />
-				<span class="small">OTHER MODS</span>
+				<span class="small">DEATH PENALTY</span>
 			</div>
 
 		</div>
@@ -1499,9 +1498,23 @@ const buttonlist = ["character","lifepath","cyberware","netrunning"];
         });
     });
 
+on("clicked:newcharacter", function() {
+	
+	getAttrs(["shownewcharacter","Reflex"], function(v) {
+
+        setAttrs({
+          shownewcharacter: v.shownewcharacter !== "1" ? "1" : "0"
+        });
+
+      });
+});
+
 const netrunlist = ["nbi","blackice","hardware"];
     netrunlist.forEach(button => {
         on(`clicked:${button}`, function() {
+
+        	const flag = `${button}_flag`;
+
             setAttrs({
                 netrunTab: button
             });
